--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.0.0",
-		"wrangler": "^3.0.0"
+		"vite": "^6.0.0"
 	},
 	"dependencies": {
 		"@inlang/paraglide-sveltekit": "^0.15.5",
