--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
 	},
 	"dependencies": {
 		"@inlang/paraglide-sveltekit": "^0.15.5",
-		"@types/three": "^0.174.0",
-		"lucide-svelte": "^0.475.0",
-		"three": "^0.174.0"
+		"lucide-svelte": "^0.475.0"
 	}
 }
