--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
-		"@sveltejs/adapter-cloudflare": "^5.0.1",
-		"@sveltejs/enhanced-img": "^0.4.4",
+		"@sveltejs/adapter-cloudflare": "^7.0.3",
+		"@sveltejs/enhanced-img": "^0.6.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
@@ -33,10 +33,11 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.0.0"
+		"vite": "^6.0.0",
+		"@inlang/paraglide-js": "2.0.13"
 	},
 	"dependencies": {
-		"@inlang/paraglide-sveltekit": "^0.15.5",
-		"lucide-svelte": "^0.475.0"
+		"@inlang/paraglide-js": "^2.0.13",
+		"lucide-svelte": "^0.511.0"
 	}
 }
