--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@inlang/paraglide-js": "2.0.13",
 		"@sveltejs/adapter-cloudflare": "^7.0.3",
 		"@sveltejs/enhanced-img": "^0.6.0",
-		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/kit": "^2.21.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.0.0",
+		"eslint-plugin-svelte": "^3.9.0",
 		"globals": "^16.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -34,10 +35,11 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
-		"@inlang/paraglide-js": "2.0.13"
+		"vite-plugin-devtools-json": "^0.1.0"
 	},
 	"dependencies": {
 		"@inlang/paraglide-js": "^2.0.13",
+		"animejs": "^4.0.2",
 		"lucide-svelte": "^0.511.0"
 	}
 }
